--- a/labs/Lab2.Rmd
+++ b/labs/Lab2.Rmd
@@ -1,9 +1,108 @@
 ---
 title: "HAHN_Lab2"
 author: "Hope Hahn"
-date: 
+date: 01/23/24
 output: pdf_document
 ---
+
+```{r include=FALSE}
+# load packages
+library("tidymodels")
+library("tidyverse")
+library("dplyr")
+library("janitor")
+library("corrplot")
+
+# load in data
+dat <- read_csv(file = "https://raw.githubusercontent.com/MaRo406/eds-232-machine-learning/main/data/pumpkin-data.csv")
+
+# Clean names to the snake_case convention
+pumpkins <- dat %>% clean_names(case = "snake")
+
+# select columns to simplify data frame
+pumpkins <- pumpkins %>% select(variety, city_name, package, low_price, high_price, date)
+
+# Extract the month and day from the dates and add as new columns
+pumpkins <- pumpkins %>%
+  mutate(date = mdy(date),  
+         day = yday(date),
+         month = month(date))
+pumpkins %>% 
+  select(-day)
+
+# Create a new column price
+pumpkins <- pumpkins %>% 
+  mutate(price = (low_price + high_price)/2)
+
+# Retain only pumpkins with "bushel" in the package column
+new_pumpkins <- pumpkins %>% 
+  dplyr::filter(stringr::str_detect(package, "bushel"))
+
+# Convert the price if the Package contains fractional bushel values
+new_pumpkins <- new_pumpkins %>% 
+  mutate(price = case_when(
+    str_detect(package, "1 1/9") ~ price/(1.1),
+    str_detect(package, "1/2") ~ price*2,
+    TRUE ~ price))
+
+# Specify a recipe
+pumpkins_recipe <- recipe(price ~ ., data = new_pumpkins) %>% 
+  step_integer(all_predictors(), zero_based = TRUE)
+
+# Prep the recipe
+pumpkins_prep <- prep(pumpkins_recipe)
+
+# Bake the recipe to extract a preprocessed new_pumpkins data
+baked_pumpkins <- bake(pumpkins_prep, new_data = NULL)
+
+set.seed(123)
+# Split the data into training and test sets
+pumpkins_split <- baked_pumpkins %>% 
+  initial_split(prop = 0.8)
+
+# Extract training and test data
+pumpkins_train <- training(pumpkins_split)
+pumpkins_test <- testing(pumpkins_split)
+
+# Create a recipe for preprocessing the data
+lm_pumpkins_recipe <- recipe(price ~ package, data = pumpkins_train) %>% 
+  step_integer(all_predictors(), zero_based = TRUE)
+
+# Create a linear model specification
+lm_spec <- linear_reg() %>% 
+  set_engine("lm") %>% 
+  set_mode("regression")
+
+# Hold modeling components in a workflow
+lm_wf <- workflow() %>% 
+  add_recipe(lm_pumpkins_recipe) %>% 
+  add_model(lm_spec)
+
+# Train the model
+lm_wf_fit <- lm_wf %>% 
+  fit(data = pumpkins_train)
+
+# Make predictions for the test set
+predictions <- lm_wf_fit %>% 
+  predict(new_data = pumpkins_test)
+
+# Bind predictions to the test set
+lm_results <- pumpkins_test %>% 
+  select(c(package, price)) %>% 
+  bind_cols(predictions)
+
+# Encode package column
+package_encode <- lm_pumpkins_recipe %>% 
+  prep() %>% 
+  bake(new_data = pumpkins_test) %>% 
+  select(package)
+
+# Bind encoded package column to the results
+ plot_results <- lm_results %>%
+ bind_cols(package_encode %>%
+               rename(package_integer = package)) %>%
+  relocate(package_integer, .after = package)
+```
 
 Today we will be continuing the pumpkin case study from last week. We will be using the data that you cleaned and split last time (pumpkins_train) and will be comparing our results today to those you have already obtained. Open and run your Lab 1.Rmd as a first step so those objects are available in your Environment.
 
@@ -27,17 +126,20 @@ poly_spec <- linear_reg() %>%
   set_engine("lm") %>% 
   set_mode("regression")
 ```
-Question 1: Now take the recipe and model specification that just created and bundle them into a workflow called poly_df.
+*Question 1:* Now take the recipe and model specification that just created and bundle them into a workflow called poly_wf.
 
 ```{r}
 # Bundle recipe and model spec into a workflow
-poly_wf <-
+poly_wf <- workflow() %>% 
+  add_recipe(poly_pumpkins_recipe) %>% 
+  add_model(poly_spec)
 ```
 
-Question 2: fit a model to the pumpkins_train data using your workflow and assign it to poly_wf_fit
+*Question 2:* fit a model to the pumpkins_train data using your workflow and assign it to poly_wf_fit
 ```{r}
 # Create a model
-poly_wf_fit <- 
+poly_wf_fit <- poly_wf %>% 
+  fit(data = pumpkins_train)
 ```
 
 ```{r}
@@ -45,11 +147,12 @@ poly_wf_fit <-
 poly_wf_fit
 ```
 
-
 ```{r}
 # Make price predictions on test data
-poly_results <- poly_wf_fit %>% predict(new_data = pumpkins_test) %>% 
-  bind_cols(pumpkins_test %>% select(c(package, price))) %>% 
+poly_results <- poly_wf_fit %>% 
+  predict(new_data = pumpkins_test) %>% 
+  bind_cols(pumpkins_test %>% 
+  select(c(package, price))) %>% 
   relocate(.pred, .after = last_col())
 
 # Print the results
@@ -59,18 +162,20 @@ poly_results %>%
 
 Now let's evaluate how the model performed on the test_set using yardstick::metrics().
 ```{r}
+# evaluate model performance
 metrics(data = poly_results, truth = price, estimate = .pred)
 ```
-Question 3: How do the performance metrics differ between the linear model from last week and the polynomial model we fit today?  Which model performs better on predicting the price of different packages of pumpkins?
+*Question 3:* How do the performance metrics differ between the linear model from last week and the polynomial model we fit today?  Which model performs better on predicting the price of different packages of pumpkins?
+
+* **The metrics show that there is less error and a better model fit for the polynomial model. The polynomial model does a better job predicting the price of different packages of pumpkins.**
 
 Let's visualize our model results.  First prep the results by binding the encoded package variable to them.
 ```{r}
 # Bind encoded package column to the results
 poly_results <- poly_results %>% 
   bind_cols(package_encode %>% 
-              rename(package_integer = package)) %>% 
+  rename(package_integer = package)) %>% 
   relocate(package_integer, .after = package)
-
 
 # Print new results data frame
 poly_results %>% 
@@ -79,34 +184,100 @@ poly_results %>%
 
 OK, now let's take a look! 
 
-Question 4: Create a scatter plot that takes the poly_results and plots package vs. price.  Then draw a line showing our model's predicted values (.pred). Hint: you'll need separate geoms for the data points and the prediction line.
+*Question 4:* Create a scatter plot that takes the poly_results and plots package vs. price.  Then draw a line showing our model's predicted values (.pred). Hint: you'll need separate geoms for the data points and the prediction line.
 ```{r}
 # Make a scatter plot
 poly_results %>% 
-
+  ggplot(mapping = aes(x = package, y = price)) +
+    geom_point(size = 1.6) +
+    geom_line(aes(y = .pred), color = "cornflowerblue", linewidth = 1.2)
 ```
 
 You can see that a curved line fits your data much better.
 
-Question 5: Now make a smoother line by using geom_smooth instead of geom_line and passing it a polynomial formula like this:
+*Question 5*: Now make a smoother line by using geom_smooth instead of geom_line and passing it a polynomial formula like this:
 geom_smooth(method = lm, formula = y ~ poly(x, degree = 3), color = "midnightblue", size = 1.2, se = FALSE)
 
 ```{r}
 # Make a smoother scatter plot 
 poly_results %>% 
+  ggplot(mapping = aes(x = package, y = price)) +
+    geom_point(size = 1.6) +
+    geom_smooth(method = lm, formula = y ~ poly(x, degree = 3), color = "midnightblue", size = 1.2, se = FALSE)
 ```
 
 OK, now it's your turn to go through the process one more time.
- 
-Additional assignment components :
-6. Choose a new predictor variable (anything not involving package type) in this dataset.
-7. Determine its correlation with the outcome variable (price).  (Remember we calculated a correlation matrix last week)
-8. Create and test a model for your new predictor:
+
+*Question 6:* Choose a new predictor variable (anything not involving package type) in this dataset.
+
+* **For this model, I will use city name as a predictor variable.**
+
+*Question 7:* Determine its correlation with the outcome variable (price). (Remember we calculated a correlation matrix last week)
+
+* **The correlation between price and city is 0.32.**
+```{r}
+# calculate correlation between variety and price
+cor(baked_pumpkins$city_name, baked_pumpkins$price)
+```
+
+*Question 8:* Create and test a model for your new predictor:
   - Create a recipe
-  - Build a model specification (linear or polynomial)
-  - Bundle the recipe and model specification into a workflow
-  - Create a model by fitting the workflow
-  - Evaluate model performance on the test data
-  - Create a visualization of model performance
+```{r}
+# create polynomial recipe
+city_recipe <- recipe(price ~ city_name, data = pumpkins_train) %>%
+  step_integer(all_predictors(), zero_based = TRUE) %>% 
+  step_poly(all_predictors(), degree = 4)
+
+city_recipe
+```
   
-Lab 2 due 1/24 at 11:59 PM
+  - Build a model specification (linear or polynomial)
+```{r}
+# Create a model specification called poly_spec
+city_spec <- linear_reg() %>% 
+  set_engine("lm") %>% 
+  set_mode("regression")
+```
+  
+  - Bundle the recipe and model specification into a workflow
+```{r}
+# Hold modeling components in a workflow (polynomial)
+city_wf <- workflow() %>% 
+  add_recipe(city_recipe) %>% 
+  add_model(city_spec)
+```
+  
+  - Create a model by fitting the workflow
+```{r}
+# Create polynomial model
+city_wf_fit <- city_wf %>% 
+  fit(data = pumpkins_train)
+```
+  
+  - Evaluate model performance on the test data
+```{r}
+# Make price predictions on test data
+city_results <- city_wf_fit %>% 
+  predict(new_data = pumpkins_test) %>% 
+  bind_cols(pumpkins_test %>% 
+  select(c(city_name, price))) %>% 
+  relocate(.pred, .after = last_col())
+
+city_results %>% 
+  slice_head(n = 10)
+```
+```{r}
+# look at metrics
+metrics(data = city_results, truth = price, estimate = .pred)
+```
+
+  - Create a visualization of model performance
+```{r}
+# Make a scatter plot
+city_results %>% 
+  ggplot(mapping = aes(x = city_name, y = price)) +
+    geom_point(size = 1.6) +
+    geom_line(aes(y = .pred), color = "cornflowerblue", linewidth = 1.2)
+```
+  
+Choose Lab 2 due 1/24 at 11:59 PM
